--- a/email_template.html
+++ b/email_template.html
@@ -1,3 +1,5 @@
+"You can styled and upgarde this HTML and CSS templet by your desire"
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -42,20 +44,9 @@
       align-items: center;
     }
 
-    .h3{
-      color: rgb(172, 138, 138);
-      font-size: 25px;
-      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-      font-weight: bold;
-      text-decoration: underline ;
-      background-color: #1f2025;
-    }
+   
 
-    .topnav {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+    
 
     .img {
       width: 100px;
@@ -77,11 +68,7 @@
       font-weight: bold;
     }
 
-    p:hover {
-      background-color: #1a0f0f;
-      color: aqua;
-      font-size: 25px;
-    }
+   
 
     .footer {
       margin-top: 20px;
@@ -133,24 +120,9 @@
       font-size: 18px;
     }
 
-    .benefits ul {
-      list-style-type: disc;
-      color: #a89c9b;
-      margin-bottom: 15px;
-      font-size: 20px;
-      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-      font-weight: bold;
-    }
+    
 
-    .benefits ul :hover {
-      background-color: #1a0f0f;
-      color: aqua;
-      font-size: 25px;
-    }
-
-    .benefits li {
-      margin-bottom: 10px;
-    }
+  
 
     @media (max-width: 768px) {
       .header {
@@ -190,38 +162,12 @@
 <body>
   <div class="container">
     <div class="header">
-      <img class="img" src="https://firebasestorage.googleapis.com/v0/b/cow-booking-nwcb.appspot.com/o/Preview.png?alt=media&token=65eef6b9-949e-4928-a4da-ff85d7be54fa" alt="Company Logo">
+      <img class="img" src="#">
       <h1>Welcome, {{name}}!</h1>
     </div>
     <div class="content">
       <p>Dear {{name}},</p>
-      <p>Are you looking to enhance customer engagement, streamline operations, and boost efficiency in your business? My name is Umair Ahmed Ansari, and I specialize in creating powerful chatbot solutions at DataVerse Technologies.</p>
-      <p>In today's digital age, having a responsive and interactive platform for customer interactions is crucial. Chatbots offer a unique opportunity to automate tasks, provide instant responses, and deliver personalized customer experiences around the clock.</p>
-      <h3 class="h3">Here are some key benefits of integrating chatbots into your business:</h3>
-      <div class="benefits">
-        <ul>
-          <li>24/7 Availability: Ensure your customers receive immediate assistance and information anytime, anywhere, enhancing satisfaction and loyalty.</li>
-          <li>Improved Customer Service: Handle frequently asked questions and routine inquiries efficiently, freeing up your team to focus on more complex issues.</li>
-          <li>Cost Efficiency: Reduce operational costs associated with customer support and engagement while maintaining high service standards.</li>
-          <li>Lead Generation: Capture leads and qualify prospects through interactive conversations, boosting your sales funnel effectiveness.</li>
-          <li>Enhanced User Experience: Provide seamless navigation and instant responses, enhancing overall user satisfaction and retention rates.</li>
-        </ul>
-      </div>
-      <p>At DataVerse Technologies, we understand that every business is unique. Our chatbots are meticulously crafted to align perfectly with your business objectives and customer expectations. Whether you're in need of automating customer support, improving lead generation, or simplifying appointment scheduling, our custom chatbot solutions are designed to meet your specific needs.</p>
-      <p>Ready to explore how chatbots can revolutionize your business? Let's schedule a consultation to discuss your specific requirements and how we can tailor a chatbot solution that delivers measurable results.</p>
-      <p>I look forward to the opportunity to collaborate with you and help your business thrive in the digital era.</p>
-      <p>Best regards,<br>Umair Ahmed Ansari<br>For inquiries, please reach out via the provided social media links.</p>
-    </div>
-    <div class="footer">
-      <div class="social-links">
-        <a href="https://www.linkedin.com/in/umairansari92/" style="background-color: #0077B5;"><img src="https://img.icons8.com/color/48/000000/linkedin.png" alt="LinkedIn"></a>
-        <a href="https://github.com/umairansari92" style="background-color: #333;"><img src="https://img.icons8.com/ios-filled/50/000000/github.png" alt="GitHub"></a>
-        <a href="https://www.facebook.com/munna.lalokhaiti" style="background-color: #3b5998;"><img src="https://img.icons8.com/ios-filled/50/000000/facebook.png" alt="Facebook"></a>
-        <a href="https://www.instagram.com/umair.ansari.92" style="background-color: #c32aa3;"><img src="https://img.icons8.com/ios-filled/50/000000/instagram-new.png" alt="Instagram"></a>
-        <a href="https://dataversetechnologies.vercel.app/" style="background-color: #1f2937;"><img src="https://img.icons8.com/ios-filled/50/000000/domain.png" alt="Website"></a>
-        <a href="https://api.whatsapp.com/send?phone=923138624722" style="background-color: #25D366;"><img src="https://img.icons8.com/ios-filled/50/000000/whatsapp.png" alt="WhatsApp"></a>
-      </div>
-      <p>&copy; 2024 DataVerse Technologies. All rights reserved.</p>
+      <p>write your sample e-mail here.</p> 
     </div>
   </div>
 </body>
